<resources>

	<!-- アプリ名 -->
	<string name="app_name">読む瓶詰</string>

	<!-- コンテンツファイル名 -->
	<string name="filename_contents">contents_binzume_jigoku.xml</string>
	<string name="filename_save_data_format">binzume-jigoku_%1$02d</string>

	<!-- プリファレンスキー -->
	<string name="prefkey_ruby_delimiter">PREFKEY_RUBY_DELIMITER</string>
	<string name="prefkey_ruby_closure">PREFKEY_RUBY_CLOSURE</string>
	<string name="prefkey_current_db_version">PREFKEY_CURRENT_DB_VERSION</string>
	<string name="prefkey_max_section_index">PREFKEY_MAX_SECTION_INDEX</string>
	<string name="prefkey_text_speed">PREFKEY_TEXT_SPEED</string>
	<string name="prefkey_text_size">PREFKEY_TEXT_SIZE</string>
	<string name="prefkey_tutorial_finished">PREFKEY_TUTORIAL_FINISHED</string>
	<string name="prefkey_donation_nosave">PREFKEY_DONATION_NOSAVE</string>
	<string name="prefkey_tutorial_nosave">PREFKEY_TUTORIAL_NOSAVE</string>
	<string name="prefkey_about_work_nosave">PREFKEY_ABOUT_WORK_NOSAVE</string>

	<!-- In App Billingで購入できるアイテムのID -->
	<string name="iab_item_id">consume_0001</string>

	<!-- フレーズ -->
	<string name="phrase_ok">はい</string>
	<string name="phrase_cancel">いいえ</string>
	<string name="phrase_confirm">確認</string>
	<string name="phrase_error">エラー</string>
	<string name="phrase_finish">終了</string>
	<string name="phrase_finish_application">アプリを終了</string>
	<string name="phrase_back">戻る</string>
	<string name="phrase_next_section">次の章</string>
	<string name="phrase_save">セーブ</string>
	<string name="phrase_load">ロード</string>
	<string name="phrase_no_save">保存されていない</string>
	<string name="phrase_text_history">テキスト履歴</string>
	<string name="phrase_execute_donation">寄付する</string>
	<string name="phrase_cancel_donation">やめておく</string>
	<string name="phrase_normal">普通</string>
	<string name="phrase_large">大きい</string>
	<string name="phrase_small">小さい</string>
	<string name="phrase_fast">早い</string>
	<string name="phrase_slow">遅い</string>

	<!-- メニュー項目 -->
	<string name="menu_title_continue">前回の続き</string>
	<string name="menu_title_load">ロード</string>
	<string name="menu_title_setting">設定</string>

	<!-- セーブデータの名前 -->
	<string name="name_save_data0">前置き</string>
	<string name="name_save_data1">一ツ目の記錄</string>
	<string name="name_save_data2">二ツ目の記錄</string>
	<string name="name_save_data3">三ツ目の記錄</string>

	<!-- メイン画面 (話の選択) -->
	<string name="title_main_activity">話の選択</string>
	<string name="title_setting_activity">設定</string>
	<string name="title_section0">前置き</string>
	<string name="title_section1">第一の手紙</string>
	<string name="title_section2">第二の手紙</string>
	<string name="title_section3">第三の手紙</string>
	<string name="summary_introduction">役場から海洋研究所への手紙</string>
	<string name="summary_section1">
		神様からも人間からも救われ得ぬ\n哀しき二人より
	</string>
	<string name="summary_section2">
		ああ神様…………\n\n私たち二人は、こんな苛責に会いながら、病気一つせずに、日に増し丸々と肥って、康強に、美しく長って行くのです、\n\nこの島の清らかな風と、水と、豊穣な食物と、美しい、楽しい、花と鳥とに護られて…………
	</string>
	<string name="summary_section3">
		ハヤク、タスケニ、キテクダサイ。
	</string>

	<!-- チュートリアル -->
	<string name="title_tutorial_page1">このアプリについて(1)</string>
	<string name="title_tutorial_page2">このアプリについて(2)</string>
	<string name="title_tutorial_page3">操作方法(1)</string>
	<string name="title_tutorial_page4">操作方法(2)</string>

	<!-- 設定 -->
	<string name="title_setting_group_text">表示設定</string>
	<string name="title_setting_group_donation">ご寄付</string>
	<string name="title_setting_group_other">その他</string>
	<string name="title_setting_text_size">文字の大きさ</string>
	<string name="title_setting_text_speed">文字表示速度</string>
	<string name="title_setting_donation">投げ銭</string>
	<string name="title_setting_tutorial">チュートリアル</string>
	<string name="title_setting_about_this_work">「瓶詰地獄」について</string>
	<string name="summary_setting_text_size">文字の大きさを設定します</string>
	<string name="summary_setting_text_speed">文字送りの速さを設定します</string>
	<string name="summary_setting_donation">このアプリを気に入って頂けたらご寄付頂けると幸いです</string>
	<string name="summary_setting_tutorial">チュートリアルを開きます</string>
	<string name="summary_setting_about_this_work">青空文庫の「瓶詰地獄」に関する情報です</string>

	<!-- メッセージ -->
	<string name="message_confirm_finish_application">もう一度押して終了</string>
	<string name="message_confirm_back">物語を中断して前の画面に戻りますか？</string>
	<string name="message_section_finished">章が終了しました。</string>
	<string name="message_last_section_finished">最後の章が終了しました。前の画面に戻ります。</string>
	<string name="message_save_confirmation">セーブしますか？</string>
	<string name="message_save_successful">セーブしました。</string>
	<string name="message_save_failure">セーブに失敗しました。</string>
	<string name="message_load_confirmation_latest">前回の続きから始めますか？</string>
	<string name="message_load_confirmation">ロードしますか？</string>
	<string name="message_load_successful">ロードしました。</string>
	<string name="message_load_failure">ロードに失敗しました。</string>
	<string name="message_force_application">アプリを終了します。</string>
	<string name="message_confirm_for_purchase">
		このアプリを気に入って頂けたら、些少ながらご寄付頂けると幸いです。\n(ご寄付を頂かなくても機能が制限されるなどはありません)
	</string>
	<string name="message_thanks_for_purchase">ご寄付頂きありがとうございます！\n引き続き本アプリをお楽しみ下さい。</string>
	<string name="message_already_purchased">既にご寄付頂いています。重ねてのお心遣いありがとうございます。</string>

	<!-- 長文テキスト -->
	<string name="text_about_this_work">
		底本：\n\t\t「夢野久作怪奇幻想傑作選　あやかしの鼓」角川ホラー文庫、角川書店\n\t\t1998（平成10）年4月10日初版発行\n\n初出：\n\t\t「猟奇」\n\t\t1928（昭和3）年10月\n\n入力：\n\t\t林裕司\n\n校正：\n\t\t浜野　智\n\t\t1998年11月10日公開\n\t\t2012年12月19日修正\n\n青空文庫作成ファイル：\n\t\tこのファイルは、インターネットの図書館、青空文庫 ( http://www.aozora.gr.jp/ ) で作られました。入力、校正、制作にあたったのは、ボランティアの皆さんです。
	</string>
	<string name="text_tutorial_1_1">『瓶詰地獄』あるいは『瓶詰の地獄』は、小説家・夢野久作氏 (1889/01/04 〜 1936/03/11) の作品です。</string>
	<string name="text_tutorial_1_2">前置きと三通の手紙から構成された本作は掌編というべき短い作品であり、筋書きもさほど難しいものではありません。</string>
	<string name="text_tutorial_1_3">しかし三通のどれが最初でどれが最後なのか、時系列を考慮しつつ読み進めると、この物語は様々な矛盾をはらんでいることが分かります。</string>
	<string name="text_tutorial_1_4">矛盾点については、多くの方が考察しておられます。この物語をどの順番で読み、どのように解釈するかは、読者それぞれに委ねられていることの証かと思います。</string>
	<string name="text_tutorial_2_1">このアプリは、『瓶詰地獄』という作品を色々な解釈で楽しんで頂ければと思い作成したものです。</string>
	<string name="text_tutorial_2_2">前置きと三通の手紙の四つを別々に読んで頂けるようになっていますので、気になったものから読むなり、順番通りに読むなり自由に色々試してみて下さい。</string>
	<string name="text_tutorial_2_3">なお本作には、インモラルな内容、現代では不適切と思われる表現、難読な漢字が見られます。しかし原文を尊重し、一切手を加えていません。\nご承知おき頂ければと思います。</string>
	<string name="text_tutorial_2_4">また、アプリの作成に当っては青空文庫様が公開されているファイルを利用致しました。ここに篤く御礼申し上げます。</string>
	<string name="text_tutorial_3_1">【章の選択】\n読む手紙を選択する画面（以下「メイン画面」と表記）で、前置きと三通の手紙のどれを読むか選択します。</string>
	<string name="text_tutorial_3_2">【アプリの設定】\nメイン画面から設定を開いて、文字の大きさや文字送りのスピードを選択することができます。チュートリアルを読み直すこともできます。</string>
	<string name="text_tutorial_3_3">【テキストの早送り】\nテキストが進んでいるときに画面をタップすると、その文章だけ早送りすることができます。</string>
	<string name="text_tutorial_3_4">【テキスト履歴の確認】\nテキストが表示されているとき画面上で上向きにフリックすると、今まで読んだテキストを確認することができます。</string>
	<string name="text_tutorial_4_1">【セーブとロード】\n画面を長押しするとセーブ画面が開きますので、そこから進行状況のセーブまたはロードができます。\nセーブは3つまで作ることができます。なお、ロードはメイン画面からも可能です。</string>
	<string name="text_tutorial_4_2">【前回の続き】\n手紙を読み進めると、最新の状態が自動的にセーブされます。読むのを終わらせた箇所から読み直したい場合はメイン画面から再開して下さい。</string>

	<!-- エラー(ユーザーが確認できるもの) -->
	<string name="error_app_initialize">アプリの初期化に失敗しました。</string>
	<string name="error_purchase_not_supported">この端末ではアプリ内購入を行うことができません。</string>
	<string name="error_purchase_failed">アプリ内購入に失敗しました。時間をおいて再度お試し下さい。</string>

	<!-- 例外(ユーザーが確認できないもの。デバッグ用) -->
	<string name="exception_message_section_index">Section number is invalid.</string>
	<string name="exception_message_imageview_visibility">At least one ImageView must be invisible.</string>
	<string name="exception_illegal_section_definition">Definition of section title and description are not correct.</string>
	<string name="exception_illegal_contents_fragment">ContentsFragment must be supplied section index or save data.</string>
	<string name="exception_illegal_contents_type">Illegal contents-type is supplied.</string>
	<string name="exception_holder_is_null">ContentsHolder must exist when ContentsFragment.restoreFromSaveData is called.</string>
	<string name="exception_save_data_not_supplied">SaveActivity must be supplied save data.</string>
	<string name="exception_unexpected_save_button_clicked">Unexpected save button is clicked.</string>
	<string name="exception_iab_not_supported">In App Billing is not supported. : CODE = </string>
	<string name="exception_iab_query_invalid_response">Failed to query SKUs. : CODE = </string>
	<string name="exception_iab_cannot_get_purchases">Failed to getPurchases. : CODE = </string>
	<string name="exception_iab_cannot_consume_purchases">Failed to consumePurchases. : CODE = </string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
