<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_continue"
		android:title="@string/menu_title_continue"
		android:icon="@drawable/ic_schedule_white_24dp"
		app:showAsAction="always"
		/>

	<item
		android:id="@+id/menu_load"
		android:title="@string/menu_title_load"
		android:icon="@drawable/ic_history_white_24dp"
		app:showAsAction="always"
		/>

	<item
		android:id="@+id/menu_setting"
		android:title="@string/menu_title_setting"
		android:icon="@drawable/ic_settings_white_24dp"
		app:showAsAction="always"
		/>

	<item
		android:id="@+id/menu_tutorial"
		android:title="@string/phrase_tutorial"
		app:showAsAction="never"
		/>

	<item
		android:id="@+id/menu_debug"
		android:title="DEBUG"
		app:showAsAction="never"
		/>

</menu>
